doc/v2.0/_sources/reference/generated/ak.nanmin.rst.txt
ak.nanmin
---------

.. py:module: ak.nanmin

Defined in `awkward.operations.ak_min <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_min.py>`__ on `line 92 <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_min.py#L92>`__.

.. py:function:: ak.nanmin(array, axis=None, *, keepdims=False, initial=None, mask_identity=True, flatten_records=unset, highlevel=True, behavior=None)


    :param array: Array-like data (anything :py:obj:`ak.to_layout` recognizes).
    :param axis: If None, combine all values from the array into
             a single scalar result; if an int, group by that axis: ``0`` is the
             outermost, ``1`` is the first level of nested lists, etc., and
             negative ``axis`` counts from the innermost: ``-1`` is the innermost,
             ``-2`` is the next level up, etc.
    :type axis: None or int
    :param keepdims: If False, this reducer decreases the number of
                 dimensions by 1; if True, the reduced values are wrapped in a new
                 length-1 dimension so that the result of this operation may be
                 broadcasted with the original array.
    :type keepdims: bool
    :param initial: The maximum value of an output element, as
                an alternative to the numeric type's natural identity (e.g. infinity
                for floating-point types, a maximum integer for integer types).
                If you use ``initial``, you might also want ``mask_identity=False``.
    :type initial: None or number
    :param mask_identity: If True, reducing over empty lists results in
                      None (an option type); otherwise, reducing over empty lists
                      results in the operation's identity.
    :type mask_identity: bool

Like :py:obj:`ak.min`, but treating NaN ("not a number") values as missing.

Equivalent to

.. code-block:: python


    ak.min(ak.nan_to_none(array))

with all other arguments unchanged.

See also :py:obj:`ak.min`.

